cleaning up styles

--- a/src/styles/_OLD/content.sass
+++ b/src/styles/_OLD/content.sass
@@ -1,10 +1,17 @@
+@import 'navbar'
+@import 'section'
+
 #wrapper:not(.menuOpen) #content
   padding-left : 241px
+
 
 @media screen and (max-width: 600px)
   #content
     font-size : 9px
+  
+
 
 @media screen and (max-width: 767px)
   #content
     padding : 0 !important
+  
