--- a/src/styles/logo.sass
+++ b/src/styles/logo.sass
@@ -1,13 +1,10 @@
-#logo {
-  padding    : 40px 24px 37px 24px;
-  text-align : center;
+#logo
+  padding    : 40px 24px 37px 24px
+  text-align : center
 
-  img {
-    margin-bottom : 14px;
-  }
+  img
+    margin-bottom : 14px
 
-  h4 {
-    opacity : .5;
-    filter  : alpha(opacity=50);
-  }
-}
+  h4
+    opacity : .5
+    filter  : alpha(opacity=50)
