--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -1,41 +1,32 @@
-html {
-  -webkit-font-smoothing : antialiased;
-}
+html
+  -webkit-font-smoothing : antialiased
 
-body {
-  font-size   : 12px;
-  font-family : 'apercuregular';
-}
+body
+  font-size   : 12px
+  font-family : 'apercuregular'
 
-h1, h3, h4 {
-  font-family : 'apercubold';
-  font-weight : normal;
-}
+h1, h3, h4
+  font-family : 'apercubold'
+  font-weight : normal
 
-h1 {
-  font-size     : 5.5em;
-  margin-bottom : 3px;
-}
+h1
+  font-size     : 5.5em
+  margin-bottom : 3px
 
-h3 {
-  font-size : 1.3em;
-}
+h3
+  font-size : 1.3em
 
-h4 {
-  font-size : 1em;
-}
+h4
+  font-size : 1em
 
-a, a:hover {
-  color : $orange;
-}
+a, a:hover
+  color : $orange
 
-p {
-  font-size   : 1.8em;
-  line-height : 1.4em;
-}
+p
+  font-size   : 1.8em
+  line-height : 1.4em
 
-h4.header {
-  margin      : 28px 0 13px 0;
-  color       : $darkGrey;
-  font-family : 'apercubold';
-}
+h4.header
+  margin      : 28px 0 13px 0
+  color       : $darkGrey
+  font-family : 'apercubold'
