--- a/src/styles/menu.sass
+++ b/src/styles/menu.sass
@@ -1,103 +1,93 @@
-@import 'logo';
+@import 'logo'
+@import '_variables'
 
-#menu {
-  width         : 240px;
-  position      : absolute;
-  top           : 0;
-  height        : 100%;
-  left          : -240px;
-  z-index       : 10000;
+#wrapper, .navbar, #menu-inner
+  left     : 0
+  position : relative
 
-  ul {
-    overflow : hidden;
-    margin   : 0 0 5px 0;
+  -webkit-transition : all .15s ease-out
+  -o-transition      : all .15s ease-out
+  transition         : all .15s ease-out
 
-    li {
-      margin-bottom : 13px;
-      font-size     : 16px;
-      position      : relative;
-      padding       : 0 24px;
-    }
+#menu
+  width         : 240px
+  position      : absolute
+  top           : 0
+  height        : 100%
+  left          : -240px
+  z-index       : 10000
 
-    .active {
-      color       : $orange;
-      font-family : 'apercubold';
-    }
+  ul
+    overflow : hidden
+    margin   : 0 0 5px 0
 
-  }
+    li
+      margin-bottom : 13px
+      font-size     : 16px
+      position      : relative
+      padding       : 0 24px
 
-  .scroll {
-    overflow : auto;
+    .active
+      color       : $orange
+      font-family : 'apercubold'
 
-    ul {
-      margin-top : -8px;
-    }
+  .scroll
+    overflow : auto
 
-    ul.open {
-      display : block;
-    }
+    ul
+      margin-top : -8px
 
-    h3 {
-      padding    : 17px 24px 13px 24px;
-      border-top : 1px solid #ebebeb;
-    }
+    ul.open
+      display : block
+    
+    h3
+      padding    : 17px 24px 13px 24px
+      border-top : 1px solid #ebebeb
 
-    #categories  {
-      h3 {
-        background     : url(image_path('right-arrow.gif')) no-repeat 207px 24px;
-        padding-bottom : 20px;
-        cursor         : pointer;
-      }
+    #categories 
+      h3
+        /*background     : url(../images/right-arrow.gif) no-repeat 207px 24px*/
+        padding-bottom : 20px
+        cursor         : pointer
+      
+      h3.open
+        /*background-image : url(../images/down-arrow.gif)*/
 
-      h3.open {
-        background-image : url(image_path('down-arrow.gif'));
-      }
-    }
+    .actions
+      position : absolute
 
-    .actions {
-      position : absolute;
-    }
+    .left
+      left : 8px
 
-    .left {
-      left : 8px;
-    }
+    .right
+      right : 8px
 
-    .right {
-      right : 8px;
+      .fa
+        margin-left : 5px
+      
 
-      .fa {
-        margin-left : 5px;
-      }
-    }
+    .create
+      cursor : pointer
 
-    .create {
-      cursor : pointer;
+      input
+        cursor : inherit
+      
 
-      input {
-        cursor : inherit;
-      }
+      .right
+        right : 26px
 
-      .right {
-        right : 26px;
-      }
 
-    }
+#menu-inner
+  background    : $white
+  border-right  : 1px solid $grey
+  height        : 100%
+  left          : 0
+  position      : fixed
+  top           : 0
+  width         : 240px
 
-  }
-}
 
-#menu-inner {
-  background    : $white;
-  border-right  : 1px solid $grey;
-  height        : 100%;
-  left          : 0;
-  position      : fixed;
-  top           : 0;
-  width         : 240px;
-}
-
-@media screen and (max-width: 767px) {
-  #menu, #menu-inner {
-    left:-240px;
-  }
-}
+@media screen and (max-width: 767px)
+  #menu, #menu-inner
+    left:-240px
+  
