--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,5 +1,7 @@
 @import url('fonts.css')
 
+$icon-font-path: '../fonts/bootstrap/'
+@import 'bootstrap/bootstrap.scss'
 @import '_variables'
 @import 'reset'
 @import 'typography'
