--- a/src/styles/menu.sass
+++ b/src/styles/menu.sass
@@ -45,13 +45,13 @@
       border-top : 1px solid #ebebeb
 
     #categories 
-      h3
-        /*background     : url(../images/right-arrow.gif) no-repeat 207px 24px*/
+      h3.has-sections
+        background     : url(../images/right-arrow.gif) no-repeat 207px 24px
         padding-bottom : 20px
         cursor         : pointer
       
-      h3.open
-        /*background-image : url(../images/down-arrow.gif)*/
+      h3.has-sections.open
+        background-image : url(../images/down-arrow.gif)
 
     .actions
       position : absolute
