adding drag and drop

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -6,3 +6,8 @@ $icon-font-path: '../fonts/bootstrap/'
 @import 'reset'
 @import 'typography'
 @import 'global'
+@import 'buttons'
+
+.placeholder
+  height : 20px
+  background : red
