--- a/src/styles/FileComponent.sass
+++ b/src/styles/FileComponent.sass
@@ -5,6 +5,10 @@
   border-bottom : 1px solid $grey
   display       : block
   padding       : 18px 0 20px 0
+  position      : relative
+
+  -webkit-user-drag   : element
+  -webkit-user-select : none
 
   a
     color : $darkGrey
