added text editor

--- a/src/styles/ContentSection.sass
+++ b/src/styles/ContentSection.sass
@@ -11,6 +11,11 @@ section
       overflow      : hidden
       text-overflow : ellipsis
 
+  .form-control
+    font-size : 1em
+    p:not(:first-child)
+      margin : 30px 0 0 0
+
   .copy
     .btn-toolbar
       margin-bottom : 10px
