--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -13,6 +13,10 @@ h1
   font-size     : 5.5em
   margin-bottom : 3px
 
+  p
+    font-size   : inherit
+    line-height : inherit
+
 h3
   font-size : 1.3em
 
