--- a/src/styles/DragMixin.sass
+++ b/src/styles/DragMixin.sass
@@ -1,7 +1,7 @@
 .drag-controller
   cursor  : move
-  display : block;
+  display : block
 
 .placeholder
   height : 3px
-  background : #ff4400
+  background : #FFF
